--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2011-??-??  Juergen Knoedlseder  <knodlseder@cesr.fr>
+
+        * Version 0.2.1 released
+        ========================
+
+        Correct test environment
+        Adjust Python wraper compile option on Darwin
+
 2011-02-21  Juergen Knoedlseder  <knodlseder@cesr.fr>
 
         * Version 0.2.0 released
