--- a/test/README
+++ b/test/README
@@ -27,3 +27,8 @@ example_models.py
   Example Python pipeline for unbind analysis that is executed
   on a number of models (point source, disk source, Gaussian
   source, Shell source).
+
+example_survey.py
+  This script illustrates how a survey can be simulated and analysed.
+  The script can be easily extended to adapt specific survey
+  strategies and simulated source models.
