--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-2011-??-??  Juergen Knoedlseder  <knodlseder@cesr.fr>
+2011-02-24  Juergen Knoedlseder  <knodlseder@cesr.fr>
 
         * Version 0.2.1 released
         ========================
