--- a/ChangeLog
+++ b/ChangeLog
@@ -1,10 +1,17 @@
+2011-07-09  Juergen Knoedlseder  <knodlseder@cesr.fr>
+
+        * Version 0.2.3 released
+        ========================
+
+        Improve configuration script
+
 2011-02-24  Juergen Knoedlseder  <knodlseder@cesr.fr>
 
         * Version 0.2.1 released
         ========================
 
         Correct test environment
-        Adjust Python wraper compile option on Darwin
+        Adjust Python wrapper compile option on Darwin
 
 2011-02-21  Juergen Knoedlseder  <knodlseder@cesr.fr>
 
