updated for ctatools-00-02-04

--- a/NEWS
+++ b/NEWS
@@ -1,8 +1,8 @@
-New Features and Important Changes in ctatools 00-02-03
+New Features and Important Changes in ctatools 00-02-04
 
 Author(s) : Juergen Knoedlseder
 
-July 9th, 2011
+July 20, 2011
 
 
 1. Introduction
@@ -12,12 +12,14 @@ This document briefly summarizes executable by executable the most important cha
 
 2. Configuration
 -----------------
-Remove pkg-config usage from configure.ac as this introduced somas
-on Mac OS X systems (by default there is no pkg-config on Mac OS X).
+The configuration script aborts now if no C++ compiler is found.
 
-Test for presence of Python.h and build Python binding only if the
-file exists. This should resolve installation issues on systems that
-do not have the Python development package installed.
+Added ctatools-init.sh, ctatools-init.csh and ctatools-setup
+scripts. They needed to be called when ctatools is installed
+in a location that differs from GammaLib, so that the 
+environment is set up correctly also for this case. If ctatools
+is in the same location as GammaLib, these scripts do not need
+to be used.
 
 
 3. Python interface
