--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,17 @@
+2011-07-20  Juergen Knoedlseder  <knodlseder@cesr.fr>
+
+        * Version 0.2.4 released
+        ========================
+
+        Improve configure script
+        Add scripts for ctatools environment setting
+
 2011-07-09  Juergen Knoedlseder  <knodlseder@cesr.fr>
 
         * Version 0.2.3 released
         ========================
 
-        Improve configuration script
+        Improve configure script
 
 2011-02-24  Juergen Knoedlseder  <knodlseder@cesr.fr>
 
