--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2011-07-27  Juergen Knoedlseder  <knodlseder@cesr.fr>
+
+        * Version 0.2.5 released
+        ========================
+
+        ctbin extracts the image centre from an observation if provided
+
 2011-07-20  Juergen Knoedlseder  <knodlseder@cesr.fr>
 
         * Version 0.2.4 released
