--- a/NEWS
+++ b/NEWS
@@ -2,7 +2,7 @@ New Features and Important Changes in ctatools 00-02-05
 
 Author(s) : Juergen Knoedlseder
 
-July 27, 2011
+July 29, 2011
 
 
 1. Introduction
@@ -41,3 +41,28 @@ is used from Python.
 7. ctlike - CTA maximum likelihood fitting
 ------------------------------------------
 None
+
+
+8. Examples
+-----------
+Add folder with example scripts. These scripts will be installed in
+$CTATOOLS/share/examples
+
+
+9. Scripts
+----------
+Add folder with python scripts. These scripts will be installed in
+$CTATOOLS/lib/pythonX.X/site-packages. In addition, symbolic link
+without the .py suffix will be created for cscripts in
+$CTATOOLS/bin so that cscripts are executable as normal ctools.
+
+
+10. caldb
+---------
+None
+
+
+11. models
+----------
+Add folder with background models and source model descriptions
+(XML files).
