--- a/test/README
+++ b/test/README
@@ -1,27 +1,14 @@
 This folder contains files used for unit testing and files that serve
 as example scripts for ctatools.
 
-test_ctatools.sh
-  Unit test for ctatools executables.
+test_cscripts.sh
+  Unit test for cscripts.
+
+test_ctools.sh
+  Unit test for ctools.
 
 test_python.py
   Unit test for ctatools Python interface.
-
-example_binned.py
-  Example Python pipelines for binned analysis.
-  The first pipeline writes intermediate results to the disk while
-  the second pipeline keeps the results in memory.
-  If matplotlib is installed on the system the fitted spectrum
-  and the observed offset angle distribution is displayed in
-  counts space.
-
-example_unbinned.py
-  Example Python pipelines for unbinned analysis.
-  The first pipeline writes intermediate results to the disk while
-  the second pipeline keeps the results in memory.
-  If matplotlib is installed on the system the fitted spectrum
-  and the observed offset angle distribution is displayed in
-  counts space.
 
 example_models.py
   Example Python pipeline for unbinned analysis that is executed
@@ -32,9 +19,3 @@ example_survey.py
   This script illustrates how a survey can be simulated and analysed.
   The script can be easily extended to adapt specific survey
   strategies and simulated source models.
-
-test_coverage.py
-  Creates pull data for model fit parameters.
-
-pull_histogram.py
-  Creates pull histograms from pull data.
