--- a/ChangeLog
+++ b/ChangeLog
@@ -1,10 +1,12 @@
-2011-07-29  Juergen Knoedlseder  <knodlseder@cesr.fr>
+2011-10-03  Juergen Knoedlseder  <knodlseder@cesr.fr>
 
         * Version 0.2.5 released
         ========================
 
         ctbin extracts the image centre from an observation if provided
         Add models directory
+        Add examples directory
+        Add scripts directory
 
 2011-07-20  Juergen Knoedlseder  <knodlseder@cesr.fr>
 
