renamed to ctools

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2011-10-06  Juergen Knoedlseder  <knodlseder@cesr.fr>
+
+        * Version 0.3.0 released
+        ========================
+
+        Renamed to ctools
+
+
 2011-10-03  Juergen Knoedlseder  <knodlseder@cesr.fr>
 
         * Version 0.2.5 released
