renamed to ctools

--- a/doc/um/latex/ctools-manual.tex
+++ b/doc/um/latex/ctools-manual.tex
@@ -1,8 +1,8 @@
 %---------------------------------------------------------------------------- 
-%                             ctatools User Manual
+%                             ctools User Manual
 %
 % Version: 0.1
-% Last modification: 12 August 2011
+% Last modification: 6 October 2011
 %----------------------------------------------------------------------------
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -48,14 +48,14 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Definitions for manual package
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\newcommand{\task}{\mbox{ctatools}}
+\newcommand{\task}{\mbox{ctools}}
 \newcommand{\this}{\mbox{\tt \task}}
 \newcommand{\gammalib}{\mbox{\tt gammalib}}
 \newcommand{\cfitsio}{\mbox{\tt cfitsio}}
 \newcommand{\ctools}{\mbox{\tt ctools}}
 \newcommand{\cscripts}{\mbox{\tt cscripts}}
 \newcommand{\version}{\mbox{0.1}}
-\newcommand{\calendar}{\mbox{12 August 2011}}
+\newcommand{\calendar}{\mbox{6 October 2011}}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -137,7 +137,7 @@ No system administrator privileges are needed to install \this.
 \this\ is built on top of \gammalib, hence \gammalib\ needs to be built, installed and configured
 before \this\ can be installed.
 In case that \this\ is already installed on your system you may skip reading this section
-and continue with Section \ref{sec:ctatools} that explains how to install \this.
+and continue with Section \ref{sec:ctools} that explains how to install \this.
 
 You will need the following to build the \gammalib:
 \begin{itemize}
@@ -176,7 +176,7 @@ configuration of environment.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Installing \this}
-\label{sec:ctatools}
+\label{sec:ctools}
 
 Step by step instruction:
 download,
@@ -229,7 +229,7 @@ configuration of environment.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% ctatools reference manual (for experienced users)
+% ctools reference manual (for experienced users)
 %
 % This section should decribe the system facilities and their usage, should provide a complete listing
 % of error messages and should describe how to recover from them. It should be complete. Formal
