--- a/doc/um/latex/manual.sty
+++ b/doc/um/latex/manual.sty
@@ -1,10 +1,10 @@
 %%
-%% "manual.sty" provides definitions for the ctatools User Manual
+%% "manual.sty" provides definitions for the ctools User Manual
 %% 
 %% Copyright (C) 2011 Jurgen Knodlseder
 %%
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesPackage{manual}[2011/08/12 v1.0 ctatools User Manual]
+\ProvidesPackage{manual}[2011/08/12 v1.0 ctools User Manual]
 
 %
 % The page dimensions
