--- a/ChangeLog
+++ b/ChangeLog
@@ -1,11 +1,20 @@
-2011-10-20  Juergen Knoedlseder  <knodlseder@cesr.fr>
+2011-10-23  Juergen Knoedlseder  <knodlseder@cesr.fr>
 
-        * Version 0.3.0 released
+        * Version 0.4.0 released
         ========================
 
         Renamed to ctools
         Add configure options for Mac OSX universal builds
         Remove automake dependency tracking
+        Improve building of Python bindings
+
+
+2011-10-06  Juergen Knoedlseder  <knodlseder@cesr.fr>
+
+        * Version 0.3.0 released
+        ========================
+
+        Renamed to ctools
 
 
 2011-10-03  Juergen Knoedlseder  <knodlseder@cesr.fr>
