Update e-mail address and release date

--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 ctools information
 ==================
-Version:             00-04-00 (October 20, 2011)
-Author:              Juergen Knodlseder (knodlseder@cesr.fr)
+Version:             00-04-00 (March 9, 2012)
+Author:              Juergen Knodlseder (jurgen.knodlseder@irap.omp.eu)
 GammaLib dependency: 00-05-00
 
 
