--- a/NEWS
+++ b/NEWS
@@ -1,8 +1,8 @@
-New Features and Important Changes in ctools 00-04-00
+New Features and Important Changes in ctools 00-05-00
 
 Author(s) : Juergen Knoedlseder
 
-March 9, 2012
+July 18, 2012
 
 
 1. Introduction
@@ -13,92 +13,36 @@ important changes made since the last release of ctools.
 
 2. Configuration
 -----------------
-The configure options --enable-universalsdk and --with-universal-archs
-have been added to control building of universal libraries.  This is
-particularily required if the installed Python architecture differs from
-the default architecture created by the compiler.
-
-Remove automake dependency tracking as this conflicts with Mac OS X
-universal builds.
-
-Prefixed directory preceeds now the $GAMMALIB directory in the search
-for a valid GammaLib installation. This allows local installs on top
-of a global GammaLib installation without changing the $GAMMALIB
-environment variable.
+None
 
 
 3. Python interface
 -------------------
-The Python binding building scheme from GammaLib has been adapted.
-This avoids double compilation during 'make' and performs a special
-build during 'make check' that provides a Python module which is
-statically linked to the ctools library.
+None
 
 
 4. ctobssim - CTA observation simulation
 ----------------------------------------
-Add deadc parameter to control the deadtime correction factor for the
-observation. The deadtime correction factor deadc is the ratio between
-livetime and ontime. A typical value of deadc=0.95 means 5% deadtime.
-
-An additional Monte Carlo process has been introduced for photons and
-background events to select only those events that fall in the livetime
-fraction of the exposure. This means that background rates are expected
-in events per real time (and not events per livetime).
+None
 
 
 5. ctselect - CTA event selection
 ---------------------------------
-Added handling of observation definition XML files. ctselect can now
-operate on single FITS files or on observation definition XML files.
-
-If an observation definition XML file is used on input, selected event 
-list(s) will be written in the current working directory by prepending
-a prefix to the filename after stripping any path information. The
-event list filenames in the input XML file are replaced by the selected
-event list filenames, and the result is written as XML file in the
-file specified by the outfile parameter.
-
-The output event list or observation definition file parameter is
-not queried any longer as first parameter. This gives a more logicial
-parameter interface where input parameters are queried first.
+None
 
 
 6. ctbin - CTA event binning
 ----------------------------
-Added handling of observation definition XML files. ctbin can now
-operate on single FITS files or on observation definition XML files.
-
-If an observation definition XML file is used on input, counts map(s) 
-will be written in the current working directory by prepending a prefix
-to the filename after stripping any path information from the event
-filenames. The event list filenames in the input XML file are replaced
-by the counts map filenames, and the result is written as XML file in the
-file specified by the outfile parameter.
-
-The output counts map or observation definition file parameter is
-not queried any longer as first parameter. This gives a more logicial
-parameter interface where input parameters are queried first.
+None
 
 
 7. ctlike - CTA maximum likelihood fitting
 ------------------------------------------
-Added handling of observation definition XML files. ctlike can now
-operate on single FITS files or on observation definition XML files.
-
-The analysis method is now determined from the input file type,
-and consequently, the method parameter has been removed. Furthermore,
-the evfile and cntmap parameters have been combined in a single infile
-parameter.
-
-The output model file parameter is not queried any longer as first
-parameter. This gives a more logicial parameter interface where input
-parameters are queried first.
-
+None
 
 8. ctskymap - CTA sky mapping
 -----------------------------
-New executable.
+None
 
 
 9. Examples
