Add support for writing of XML observation definition files.
In case that the observation container holds more than a single observation, ctobssim now outputs an observation definition XML file in addition to the event files. The filenames of the event files will be stored in the observation definition XML file so that subsequent ctools can handle all observational data together.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,9 @@
-2012-07-18  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
+2012-07-21  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
 
         * Version 0.5.0 released
         ========================
+
+	Add observation definition XML files support to ctobssim
 
 2012-03-08  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
 
