Update for ctools release 00-05-00.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,10 +1,11 @@
-2012-07-21  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
+2012-09-14  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
 
         * Version 0.5.0 released
         ========================
 
 	Add observation definition XML files support to ctobssim
         Improve logging information for ctlike
+        Add OpenPM support
 
 2012-03-08  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
 
