--- a/AUTHORS
+++ b/AUTHORS
@@ -1,1 +1,2 @@
 Juergen Knoedlseder (jurgen.knodlseder@irap.omp.eu) - overall design
+Jean-Baptiste Cayrou (cayrou@etud.insa-toulouse.fr) - openmp support
