--- a/NEWS
+++ b/NEWS
@@ -1,8 +1,8 @@
-New Features and Important Changes in ctools 00-05-00
+New Features and Important Changes in ctools 00-05-01
 
 Author(s) : Juergen Knoedlseder
 
-September 14th, 2012
+September 18th, 2012
 
 
 1. Introduction
@@ -13,9 +13,42 @@ important changes made since the last release of ctools.
 
 2. Configuration
 -----------------
-Added OpenMP support to allow for code parallelization. If available,
-OpenMP is enabled by default. OpenMP support may be disabled using
-the --disable-openmp flag.
+The clang++ compiler takes now only precedence over the g++ compiler
+if the system on which compilation is performed is Mac OS X 10.7 or
+later.
+
+If Python bindings are disabled we omit now all the Python related
+checks during configuration. This includes detection of the Python
+executable, detection of the swig executable, and the checks for the
+presence of the Python wrapper files.
+
+The Apple gcc compiler requires the gomp_thread_attr global to be
+defined when OpenMP functions are called without having any OpenMP
+section in the code. This specific requirement is now detected in
+the configure script using some dedicated test code, and the compile
+definition HAVE_OPENMP_DARWIN_KLUGE is set that allows inclusion of
+the appropriate code when needed.
+
+Furthermore, the OPENMP_LIB_LDFLAGS is not set to -lgomp on Darwin
+anymore as this appears not to be needed.
+
+The MACOSX_DEPLOYMENT_TARGET environment variable is now only exported
+when the --enable-universalsdk option is specified. This solved problems
+related to uncatched exceptions in unit tests. Possibly, these uncatched
+exceptions were due to weak linking, a feature that exists since Mac OS
+X version 10.2. By not exporting MACOSX_DEPLOYMENT_TARGET, Mac OS X
+version 10.1 is assumed.
+
+The Python bindings configuration has been improved to handle also
+the MacPorts gcc compiler on Mac OS X. Static linking during unit
+testing has been removed as this is no longer needed (don't ask me why).
+The double compilation for unit check has also be removed. A static
+link is used instead that allows adding of the wrapper directory to
+the PYTHONPATH.
+
+The TEST_ENV_DIR environment variable is also added to the load
+library path in the GammaLib setup script. This ensures the correct
+loading of shared libraries in non-standard locations.
 
 
 3. Python interface
@@ -25,15 +58,7 @@ None
 
 4. ctobssim - CTA observation simulation
 ----------------------------------------
-If several observations are processed at once, ctobssim now outputs
-an observation definition XML file and separate FITS files for each
-observation. The filenames of the FITS files will be written to the
-observation definition file.
-
-The executable now also benefits from OpenMP support, allowing for
-parallelized simulation of events in the presence of multiple
-processor cores.
-
+None
 
 5. ctselect - CTA event selection
 ---------------------------------
@@ -47,11 +72,7 @@ None
 
 7. ctlike - CTA maximum likelihood fitting
 ------------------------------------------
-ctlike computes now the total number of observed events and dumps
-them in the log file just before it dumps the number of predicted
-events. It also computes the difference between observed and
-predicted events so that the difference is immediately visible.
-
+None
 
 8. ctskymap - CTA sky mapping
 -----------------------------
