--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,5 @@
 Juergen Knoedlseder (jurgen.knodlseder@irap.omp.eu) - overall design
 Jean-Baptiste Cayrou (cayrou@etud.insa-toulouse.fr) - openmp support
+Christoph Deil (Christoph.Deil@mpi-hd.mpg.de)       - HESS support
+Mathieu De Naurois (denauroi@in2p3.fr)              - HESS support
 
